--- a/frontend-toolAI/package.json
+++ b/frontend-toolAI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-toolAI",
+  "name": "frontend-tool-ai",
   "productName": "frontend-toolAI",
   "description": "My Electron application description",
   "keywords": [],
@@ -13,6 +13,6 @@
     "firebase": "^11.9.1"
   },
   "devDependencies": {
-    "electron": "35.0.0"
+    "electron": "^35.0.0"
   }
 }
