--- a/frontend-toolAI/package.json
+++ b/frontend-toolAI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-toolAI",
+  "name": "frontend-tool-ai",
   "productName": "frontend-toolAI",
   "description": "My Electron application description",
   "keywords": [],
